# medicalchain

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.nginx  composer.json  db.sqlite3  docker-compose.yml  package-lock.json  package.json  pyproject.toml  redis.conf  render-dev.yaml  render-prod.yaml  render.yaml  requirements.txt  runtime.txt
config/: app.php  (+2 more)
medicalchain/: .env  .env.dev  .env.prod  Dockerfile  __init__.py  celerybeat-schedule  db.sqlite3  manage.py  package-lock.json  pyproject.toml  pytest.ini  render.yaml  urls.py
medicalchain/backend/apis/appointments/: urls.py  views.py
medicalchain/backend/apis/availabilities/: urls.py  views.py
medicalchain/backend/apis/doctors/: serializers.py
medicalchain/backend/apis/medications/: serializers.py  urls.py  views.py
medicalchain/backend/apis/notifications/: permissions.py  serializers.py  urls.py
medicalchain/backend/apis/payments/: serializers.py  views.py
medicalchain/backend/apis/prescriptions/: serializers.py  test_prescription_api.py  urls.py
medicalchain/backend/apps/appointments/: models.py
medicalchain/backend/apps/availabilities/: models.py
medicalchain/backend/apps/doctors/: apps.py
medicalchain/backend/apps/formats/: base.py
medicalchain/backend/apps/medications/: admin.py
medicalchain/backend/apps/notifications/: apps.py
medicalchain/backend/apps/payments/: web3_utils.py
medicalchain/backend/apps/prescriptions/: admin.py  consumers.py
medicalchain/backend/apps/reminders/: tasks.py  utils.py
medicalchain/backend/apps/users/: models.py
medicalchain/backend/smart-contracts/: hardhat.config.js  package.json
medicalchain/backend/smart-contracts/contracts/: MedicalChain.json  MedicalChainPayments.sol
medicalchain/backend/smart-contracts/scripts/: deploy.js
medicalchain/frontend/: .env.developpement  .env.example  .gitignore  build.sh  config.js  jsconfig.json  package-lock.json  package.json  webpack.config.js
medicalchain/frontend/src/: index.css  index.js
medicalchain/frontend/src/components/: BlockchainPayment.jsx  EthereumIcon.jsx  HeroSection.jsx  OldCare.jsx  PartnersSection.jsx  ProfileAvatar.jsx  PromotionsSection.jsx  ProtectedAuthRoute.jsx  ProtectedRoute.jsx  ServicesSection.jsx
medicalchain/medicalchain/: asgi.py  celery.py  urls.py  wsgi.py
medicalchain/medicalchain/settings/: base.py  dev.py  prod.py  settings.py
medicalchain/nginx/: default.conf
medicalchain/requirements/: base.txt  prod.txt
medicalchain/settings/: base.py  dev.py
medicalchain/staticfiles/: staticfiles.json
(+259 files in other folders)
