[tool.poetry]
name = "medicalchain"
version = "0.1.0"
description = "Projet Medicalchain pour la gestion blockchain médicale"
authors = ["MandelaFanuel <mandela.fanuel.1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = "5.0.6"
djangorestframework = "3.15.2"
gunicorn = "21.2.0"
redis = "5.2.1"
web3 = {version = "6.15.1", python = "<4,>=3.8"}
django-silk = "^5.3.2"
python-dotenv = "^1.0.0"
celery = "^5.3.4" 
djangorestframework-simplejwt = "^5.5.0"
drf-spectacular = "^0.28.0"
channels = "^4.2.2"
django-celery-beat = "^2.8.1"
django-celery-results = "^2.6.0"
django-filter = "^25.1"
django-cors-headers = "^4.7.0"
pytz = "^2025.2"
django-redis = "^6.0.0"
channels-redis = "^4.2.1"
Pillow = "^10.3.0"
whitenoise = "^6.6.0" 
dj-database-url = "^3.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "7.0.0"
autopep8 = "2.2.0"
pytest = "8.1.1"
ipython = "8.22.2"
django-debug-toolbar = "4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
