[project]
name = "medicalchain"
version = "0.1.0"
description = ""
authors = [
    {name = "MandelaFanuel", email = "mandela.fanuel.1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"  # Compatible 3.11 et 3.12

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"  # À synchroniser avec requires-python
django = "5.0.6"
djangorestframework = "3.15.2"
gunicorn = "21.2.0"
redis = "5.2.1"
web3 = {version = "6.15.1", python = "<4,>=3.8"}
django-silk = "^5.3.2"

[tool.poetry.group.dev.dependencies]
flake8 = "7.0.0"
autopep8 = "2.2.0"
pytest = "8.1.1"
ipython = "8.22.2"
django-debug-toolbar = "4.2.0"